<resources>
    <string name="app_name">PetSitter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Your &#xD; Password?</string>
    <string name="sign_in">Sign-In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="or_sign_in_with">or sign in with</string>

    <!-- String related to Create Account -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="invalid_confirm_password">Passwords do not equal.</string>
    <string name="email_already_exists">Email already exists.</string>
    <string name="incorrect_email_format">This email is not valid</string>
    <string name="incorrect_password_format">Password minimum 8 characters (a&#8211;z, A&#8211;Z, 0&#8211;9)</string>

    <!-- String related to Code Verification -->
    <string name="verify_code_hint">Received Code</string>
    <string name="verify_code_text">Please enter the code that you have received</string>

    <!-- String related to Main Activity -->
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="find">Find</string>
    <string name="dates">Dates</string>

    <!-- String related to profile fragment -->
    <string name="view_and_edit_profile">View and edit profile</string>
    <string name="settings">\t\t\tSettings</string>
    <string name="become_a_host">\t\t\tBecome a host</string>
    <string name="notifications">\t\t\tNotifications</string>
    <string name="feed_back">\t\t\tGive us feedback</string>
    <string name="line_seperator_description">Line seperator for each of the selectable option</string>

    <!-- String related to settings fragment -->
    <string name="currency">\t\t\tCurrency</string>
    <string name="payment_method">\t\t\tPayment Method</string>
    <string name="terms_of_service">\t\t\tTerms of Service</string>
    <string name="version">\t\t\tVersion 1.0</string>
    <string name="log_out">\t\t\tLog out</string>

    <!-- String related to all host -->
    <string name="host_title_message">Earn money as an \nPetSit host</string>
    <string name="main_message">Let\'s get you ready \nto host.</string>
    <string name="basic_title_message">Start with the basics</string>
    <string name="basic_message">We\'ll ask you about your house and amenities.</string>
    <string name="show_off_space_title">Show off your space</string>
    <string name="show_off_space_body">Upload picture and describe your place to potential animals.</string>
    <string name="ready_for_animals_title">Get ready for animals</string>
    <string name="ready_for_animals_body">Set up your price, calendar, and \nbooking settings.</string>
    <string name="place_info_title">Which of these sounds most like your place?</string>
    <string name="property_type">Now choose a property type</string>
    <string name="narrow_place">First, let\'s narrow things down</string>
    <string name="potential_monthly_earning">You could earn $$$$ \nper month</string>
    <string name="get_started">Get started</string>


    <!-- Other Strings -->
    <string name="wallpaper">wallpaper</string>
    <string name="confirm_text">Confirm</string>
    <string name="facebook_app_id">570891646594040</string>
    <string name="fb_login_protocol_scheme">fb570891646594040</string>
    <string name="google_web_client_id">74987655246-6c09dqgcec4mip9ncugoef1fdr82rl1l.apps.googleusercontent.com</string>
    <string name="cognito_pool_id">us-east-1_HecjjXia7</string>
    <string name="application_client_id">5s8cbvu4ltdcqg28r1e0r2nb4m</string>
    <string name="application_client_secret">miokebr21nbk702qho9vocki3r09umm8ikfdu3kbmc5dirsk618</string>
    <string name="aws_identity_pool_id">us-east-1:953952f4-9f26-4d0d-896d-67f14b0ae141</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="show_result">Show Result</string>
    <string name="clear">Clear</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="continue_word">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
