<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.csulb.petsitter.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/notifications"
        android:gravity="center|start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/currency"
        android:gravity="center|start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/payment_method"
        android:gravity="center|start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/terms_of_service"
        android:gravity="center|start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/version"
        android:gravity="center|start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/log_out"
        android:gravity="center|start"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description"/>


</LinearLayout>
