<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.csulb.petsitter.ProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_and_edit_profile"
                android:textSize="18sp" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/temp_profile_icon"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description">

    </ImageView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/notifications_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/notifications_icon"
            android:contentDescription="@string/notifications"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description">

    </ImageView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/setting_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/settings_icon"
            android:contentDescription="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description">

    </ImageView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/become_a_host_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/become_a_host"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/become_host_icon"
            android:contentDescription="@string/become_a_host"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_line_seperator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_gray"
        android:contentDescription="@string/line_seperator_description">

    </ImageView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/feedback_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/feed_back"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/feedback_icon"
            android:contentDescription="@string/feed_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>




</LinearLayout>
